# xPhoto

./: .clang-format  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
